<resources>
    <string name="app_name">양파마켓</string>
    <string name="preference_file_key">OnionMarket</string>

    <!-- Main -->
    <string name="home">홈</string>
    <string name="city_life">동네생활</string>
    <string name="near_me">내 근처</string>
    <string name="chat">채팅</string>
    <string name="account">나의 양파</string>
    <string name="search">검색</string>
    <string name="tune_category">관심 카테고리 설정</string>
    <string name="notification">알림</string>
    <string name="my_location">명동</string>
    <string name="set_location">내 동네 설정</string>

    <!-- Account -->
    <string name="settings">설정</string>
    <string name="login">로그인하기</string>
    <string name="view_profile">프로필 보기</string>
    <string name="sale_list">판매내역</string>
    <string name="buy_list">구매내역</string>
    <string name="favorite_list">관심목록</string>

    <string name="sale_ing">판매중</string>
    <string name="sale_done">거래완료</string>
    <string name="sale_hide">숨김</string>

    <string name="manage_sale">게시글 관리</string>
    <string name="pull_up">끌어올리기</string>
    <string name="edit">수정</string>
    <string name="hide">숨기기</string>
    <string name="delete_sale">게시물 삭제</string>

    <!-- Login -->
    <string name="login_en">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">계정이 없으신가요? <b><u>가입하기</u></b></string>
    <string name="nick">Nickname</string>
    <string name="fail_login_message">이메일이나 비밀번호를 확인하세요.</string>
    <string name="ok">확인</string>

    <!-- SignUp -->
    <string name="sign_up_en">Sign up</string>
    <string name="next_en">Next</string>
    <string name="require_input">정보를 입력해주세요.</string>
    <string name="invalid_email">올바른 이메일을 입력하세요. ex) abc@example.com</string>
    <string name="invalid_password">비밀번호는 6글자 이상 입력하세요.</string>
    <string name="fail_email_message">이미 가입된 이메일입니다.</string>
    <string name="signup_finish">회원가입 완료</string>
    <string name="location_hint">동명(읍, 면)으로 검색 (ex. 서초동)</string>

    <!-- Settings -->
    <string name="logout">로그아웃</string>
    <string name="require_login_message">회원가입 또는 로그인후 이용할 수 있습니다.</string>
    <string name="login_sign_up">로그인/가입</string>
    <string name="cancel">취소</string>

    <!-- Location -->
    <string name="str_location">%1$s %2$s</string>
    <string name="str_full_location">%1$s %2$s %3$s</string>

    <!-- Write -->
    <string name="write_title">중고거래 글쓰기</string>
    <string name="finish">완료</string>
    <string name="title">제목</string>
    <string name="won">₩</string>
    <string name="price_hint">가격 (선택사항)</string>
    <string name="content_hint">%1$s에 올릴 게시글 내용을 작성해주세요. 가품 및 판매금지품목은 게시가 제한될 수 있어요.</string>
    <string name="price_proposal">가격제안 받기</string>
    <string name="category">카테고리</string>

    <!-- Sale -->
    <string name="img_url">http://172.30.1.13:3000/img/</string>
    <string name="price_won">%1$s원</string>

    <!-- Manage Sale -->
    <string name="delete_message">게시글을 정말 삭제 하시겠습니까?</string>
    <string name="delete">삭제</string>

    <!-- Detail Sale -->
    <string name="share">공유하기</string>
    <string name="sub_menu">하위메뉴</string>
    <string name="chat_fav_view">채팅 %1$d개 · 관심 %2$d · 조회 %3$d</string>
    <string name="ok_proposal">가격제안가능</string>
    <string name="no_proposal">가격제안불가</string>
    <string name="chat_buy">채팅으로 거래하기</string>
    <string name="chat_buy_num">채팅으로 거래하기 (%1$d)</string>
    <string name="my_sale_chat_message">자신이 올린 게시물에는 채팅을 할 수 없습니다.</string>

    <!-- Chat -->
    <string name="plan">거래약속 만들기</string>
    <string name="hint_send_chat">메시지를 입력하세요</string>
    <string name="socket_io">http://172.30.1.13:3000/chat</string>
    <string name="chat_list">대화중인 채팅방</string>
    <string name="no_sale_chat">대화를 시작한 채팅 상대가 없습니다.</string>
    <string name="no_chat">채팅방이 없습니다.</string>

    <!-- notification -->
    <string name="default_notification_channel_name">onion_market_channel</string>
    <string name="chat_notification_title">채팅 알림</string>

    <!-- message -->
    <string name="server_connect_message">서버와의 통신에 문제가 있습니다. 관리자에게 문의해주세요.</string>
    <string name="add_favorite">관심 상품의 가격이 하락하거나 구매자가 생겼을때 알림을 받을 수 있습니다.</string>

    <!-- common -->
    <string name="str_dot_str">%1$s · %2$s</string>
</resources>