<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:text="@string/manage_sale"
        android:textSize="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_pull_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="25dp"
        android:text="@string/pull_up"
        android:textSize="16dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="25dp"
        android:text="@string/edit"
        android:textSize="16dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="25dp"
        android:text="@string/hide"
        android:textSize="16dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="25dp"
        android:text="@string/delete_sale"
        android:textSize="16dp"
        android:textColor="@color/black"/>

</LinearLayout>