<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.WriteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1dp"
        app:title="@string/write_title"
        app:titleTextAppearance="@style/toolbarTitleStyle"
        app:menu="@menu/menu_write_toolbar"
        app:popupTheme="@style/toolbarMenuTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/photo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/bg_photo"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0/10"
                    android:textColor="@color/gray"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider1"
            style="@style/Divider.Horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/photo_container"
            app:layout_constraintBottom_toTopOf="@id/et_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/title"
            android:textColorHint="@color/hint_gray"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintBottom_toTopOf="@id/divider2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/divider2"
            style="@style/Divider.Horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_title"
            app:layout_constraintBottom_toTopOf="@id/spin_category"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintBottom_toTopOf="@id/divider3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/divider3"
            style="@style/Divider.Horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/spin_category"
            app:layout_constraintBottom_toTopOf="@id/et_price"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/won"
            android:textSize="20dp"
            android:textColor="@color/hint_gray"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintBottom_toTopOf="@id/divider4"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:hint="@string/price_hint"
            android:textColorHint="@color/hint_gray"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintBottom_toTopOf="@id/divider4"
            app:layout_constraintLeft_toRightOf="@id/tv_won"/>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintBottom_toTopOf="@id/divider4"
            app:layout_constraintRight_toRightOf="parent">
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/price_proposal"
                android:textSize="16dp"
                android:textColor="@color/hint_gray"
                android:textStyle="bold"/>
            
        </LinearLayout>

        <View
            android:id="@+id/divider4"
            style="@style/Divider.Horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_price"
            app:layout_constraintBottom_toTopOf="@id/et_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="top|left"
            android:background="@null"
            android:hint="@string/content_hint"
            android:textColorHint="@color/hint_gray"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintTop_toBottomOf="@id/divider4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>